--- a/custom_components/tian_free/translations/zh-Hans.json
+++ b/custom_components/tian_free/translations/zh-Hans.json
@@ -3,10 +3,11 @@
     "step": {
       "user": {
         "title": "设置天聚数行免费版API",
-        "description": "请输入您的天聚数行API密钥和滚动内容间隔",
+        "description": "请输入您的天聚数行API密钥和配置选项",
         "data": {
           "api_key": "API密钥",
-          "scroll_interval": "滚动内容间隔（分钟）"
+          "scroll_interval": "滚动内容间隔（分钟）",
+          "enabled_apis": "选择要启用的内容类型"
         }
       }
     },
@@ -21,9 +22,10 @@
     "step": {
       "init": {
         "title": "天聚数行免费版选项",
-        "description": "调整滚动内容间隔设置",
+        "description": "调整滚动内容间隔和启用内容类型",
         "data": {
-          "scroll_interval": "滚动内容间隔（分钟）"
+          "scroll_interval": "滚动内容间隔（分钟）",
+          "enabled_apis": "选择要启用的内容类型"
         }
       }
     }
